--- a/survey.html
+++ b/survey.html
@@ -18,7 +18,7 @@
                 <li><a href="/environment/temp.html">home</a></li>
                 <li><a href="/environment/temp.html">about</a></li>
                 <li><a href="/environment/temp.html">project</a></li>
-                <li><a href="/environment/survey.html">Survey</a></li>
+                <li><a href="survey.html">Survey</a></li>
                 <li><a href="/environment/temp.html">donate</a></li>
                 <li><a href="/environment/temp.html">post</a></li>
             </ul>
