--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#project">project</a></li>
-            <li><a href="/environment/survey.html">Survey</a></li>
+            <li><a href="survey.html">Survey</a></li>
             <li><a href="#donate">donate</a></li>
             <li><a href="#post">post</a></li>
         </ul>
