--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#about">about</a></li>
             <li><a href="#project">project</a></li>
             <li><a href="survey.html">Survey</a></li>
-            <li><a href="efforts.html">Survey</a></li>
+            <li><a href="efforts.html">Efforts</a></li>
             <li><a href="#donate">donate</a></li>
             <li><a href="#post">post</a></li>
         </ul>
