--- a/survey.html
+++ b/survey.html
@@ -15,12 +15,13 @@
         <h1>Eco Earth</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="/environment/temp.html">home</a></li>
-                <li><a href="/environment/temp.html">about</a></li>
-                <li><a href="/environment/temp.html">project</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="index.html">about</a></li>
+                <li><a href="index.html">project</a></li>
                 <li><a href="./survey.html">Survey</a></li>
-                <li><a href="/environment/temp.html">donate</a></li>
-                <li><a href="/environment/temp.html">post</a></li>
+                <li><a href="efforts.html">Efforts</a></li>
+                <li><a href="index.html">donate</a></li>
+                <li><a href="index.html">post</a></li>
             </ul>
         </nav>
         <a href="/environment/temp.html"><button class="btn-2">explore.</button></a>
