--- a/efforts.html
+++ b/efforts.html
@@ -19,7 +19,7 @@
                 <li><a href="/environment/index.html">about</a></li>
                 <li><a href="/environment/index.html">project</a></li>
                 <li><a href="survey.html">Survey</a></li>
-                <li><a href="/environment/efforts.html">Our Efforts</a></li>
+                <li><a href="/environment/efforts.html">Efforts</a></li>
                 <li><a href="/environment/index.html">donate</a></li>
                 <li><a href="/environment/index.html">post</a></li>
                 
